--- a/Quan-ly-quan-an.csproj
+++ b/Quan-ly-quan-an.csproj
@@ -74,11 +74,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccounProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AccounProfile.Designer.cs">
+      <DependentUpon>AccounProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Account.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Account.Designer.cs">
       <DependentUpon>Account.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Category.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Category.Designer.cs">
+      <DependentUpon>Category.cs</DependentUpon>
     </Compile>
     <Compile Include="FoodMenu.cs">
       <SubType>Form</SubType>
@@ -107,8 +119,20 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <Compile Include="Table.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Table.Designer.cs">
+      <DependentUpon>Table.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AccounProfile.resx">
+      <DependentUpon>AccounProfile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Account.resx">
       <DependentUpon>Account.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Category.resx">
+      <DependentUpon>Category.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FoodMenu.resx">
       <DependentUpon>FoodMenu.cs</DependentUpon>
@@ -132,6 +156,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Table.resx">
+      <DependentUpon>Table.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
