--- a/Quan-ly-quan-an.csproj
+++ b/Quan-ly-quan-an.csproj
@@ -125,6 +125,12 @@
     <Compile Include="Table.Designer.cs">
       <DependentUpon>Table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Working.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Working.Designer.cs">
+      <DependentUpon>Working.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AccounProfile.resx">
       <DependentUpon>AccounProfile.cs</DependentUpon>
     </EmbeddedResource>
@@ -158,6 +164,9 @@
     </Compile>
     <EmbeddedResource Include="Table.resx">
       <DependentUpon>Table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Working.resx">
+      <DependentUpon>Working.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
