--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="Quan_ly_quan_an.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -21,4 +21,4 @@
             </setting>
         </Quan_ly_quan_an.Properties.Settings>
     </userSettings>
-</configuration>
+<connectionStrings><add name="QLQA" connectionString="data source=AESIR\SQLEXPRESS08;initial catalog=QLQA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="QLquananEntities" connectionString="metadata=res://*/QLQA.QADbContext.csdl|res://*/QLQA.QADbContext.ssdl|res://*/QLQA.QADbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AESIR\SQLEXPRESS08;initial catalog=QLquanan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="Model1" connectionString="data source=AESIR\SQLEXPRESS08;initial catalog=QLquanan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
