--- a/App.config
+++ b/App.config
@@ -21,4 +21,14 @@
             </setting>
         </Quan_ly_quan_an.Properties.Settings>
     </userSettings>
-<connectionStrings><add name="QLQA" connectionString="data source=AESIR\SQLEXPRESS08;initial catalog=QLQA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="QLquananEntities" connectionString="metadata=res://*/QLQA.QADbContext.csdl|res://*/QLQA.QADbContext.ssdl|res://*/QLQA.QADbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AESIR\SQLEXPRESS08;initial catalog=QLquanan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="Model1" connectionString="data source=AESIR\SQLEXPRESS08;initial catalog=QLquanan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings>
+    <add name="QLQA" connectionString="data source=AESIR\SQLEXPRESS08;initial catalog=QLQA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+        providerName="System.Data.SqlClient" />
+    <add name="QLquananEntities" connectionString="metadata=res://*/QLQA.QADbContext.csdl|res://*/QLQA.QADbContext.ssdl|res://*/QLQA.QADbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AESIR\SQLEXPRESS08;initial catalog=QLquanan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        providerName="System.Data.EntityClient" />
+    <add name="Model1" connectionString="data source=AESIR\SQLEXPRESS08;initial catalog=QLquanan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+        providerName="System.Data.SqlClient" />
+    <add name="Quan_ly_quan_an.Properties.Settings.QLQAConnectionString"
+        connectionString="Data Source=AESIR\SQLEXPRESS08;Initial Catalog=QLQA;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+</connectionStrings></configuration>
