--- a/Quan-ly-quan-an.csproj
+++ b/Quan-ly-quan-an.csproj
@@ -135,6 +135,11 @@
     <Compile Include="Model\TableFood.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLQADataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLQADataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="QLQA\Account.cs">
       <DependentUpon>QADbContext.tt</DependentUpon>
     </Compile>
@@ -235,6 +240,17 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>QADbContext.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="QLQADataSet.xsc">
+      <DependentUpon>QLQADataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QLQADataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QLQADataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLQADataSet.xss">
+      <DependentUpon>QLQADataSet.xsd</DependentUpon>
+    </None>
     <None Include="QLQA\QADbContext.edmx.diagram">
       <DependentUpon>QADbContext.edmx</DependentUpon>
     </None>
